qt6/gen_qlistwidget.h

class QBrush;
class QDataStream;
class QFont;
class QIcon;
class QListWidget;
class QListWidgetItem;
class QSize;
class QVariant;
typedef struct QActionEvent QActionEvent;
typedef struct QBrush QBrush;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QDataStream QDataStream;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFont QFont;
typedef struct QHideEvent QHideEvent;
typedef struct QIcon QIcon;
typedef struct QListWidget QListWidget;
typedef struct QListWidgetItem QListWidgetItem;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QVariant QVariant;
bool QListWidget_override_virtual_enterEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QListWidget_override_virtual_leaveEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_leaveEvent(void* self, QEvent* event);
bool QListWidget_override_virtual_moveEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QListWidget_override_virtual_closeEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QListWidget_override_virtual_tabletEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QListWidget_override_virtual_actionEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QListWidget_override_virtual_showEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_showEvent(void* self, QShowEvent* event);
bool QListWidget_override_virtual_hideEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QListWidget_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QListWidget_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QListWidget_override_virtual_metric(void* self, intptr_t slot);
int QListWidget_virtualbase_metric(const void* self, int param1);
bool QListWidget_override_virtual_initPainter(void* self, intptr_t slot);
void QListWidget_virtualbase_initPainter(const void* self, QPainter* painter);
bool QListWidget_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QListWidget_virtualbase_redirected(const void* self, QPoint* offset);
bool QListWidget_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QListWidget_virtualbase_sharedPainter(const void* self);
bool QListWidget_override_virtual_childEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_childEvent(void* self, QChildEvent* event);
bool QListWidget_override_virtual_customEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_customEvent(void* self, QEvent* event);
bool QListWidget_override_virtual_connectNotify(void* self, intptr_t slot);
void QListWidget_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QListWidget_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QListWidget_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QListWidget_delete(QListWidget* self);