qt6/gen_qlistwidget.nim

proc fQListWidget_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_enterEvent".}
proc fcQListWidget_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_enterEvent".}
proc fQListWidget_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_leaveEvent".}
proc fcQListWidget_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_leaveEvent".}
proc fQListWidget_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_moveEvent".}
proc fcQListWidget_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_moveEvent".}
proc fQListWidget_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_closeEvent".}
proc fcQListWidget_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_closeEvent".}
proc fQListWidget_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_tabletEvent".}
proc fcQListWidget_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_tabletEvent".}
proc fQListWidget_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_actionEvent".}
proc fcQListWidget_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_actionEvent".}
proc fQListWidget_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_showEvent".}
proc fcQListWidget_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_showEvent".}
proc fQListWidget_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_hideEvent".}
proc fcQListWidget_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_hideEvent".}
proc fQListWidget_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QListWidget_virtualbase_nativeEvent".}
proc fcQListWidget_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_nativeEvent".}
proc fQListWidget_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QListWidget_virtualbase_metric".}
proc fcQListWidget_override_virtual_metric(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_metric".}
proc fQListWidget_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QListWidget_virtualbase_initPainter".}
proc fcQListWidget_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_initPainter".}
proc fQListWidget_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QListWidget_virtualbase_redirected".}
proc fcQListWidget_override_virtual_redirected(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_redirected".}
proc fQListWidget_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QListWidget_virtualbase_sharedPainter".}
proc fcQListWidget_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_sharedPainter".}
proc fQListWidget_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_childEvent".}
proc fcQListWidget_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_childEvent".}
proc fQListWidget_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_customEvent".}
proc fcQListWidget_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_customEvent".}
proc fQListWidget_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QListWidget_virtualbase_connectNotify".}
proc fcQListWidget_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_connectNotify".}
proc fQListWidget_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QListWidget_virtualbase_disconnectNotify".}
proc fcQListWidget_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_disconnectNotify".}
proc fcQListWidget_delete(self: pointer) {.importc: "QListWidget_delete".}


func init*(T: type QListWidgetItem, h: ptr cQListWidgetItem): QListWidgetItem =
  T(h: h)
proc create*(T: type QListWidgetItem, ): QListWidgetItem =

  QListWidgetItem.init(fcQListWidgetItem_new())
proc create*(T: type QListWidgetItem, text: string): QListWidgetItem =

  QListWidgetItem.init(fcQListWidgetItem_new2(struct_miqt_string(data: text, len: csize_t(len(text)))))
proc create*(T: type QListWidgetItem, icon: gen_qicon.QIcon, text: string): QListWidgetItem =

  QListWidgetItem.init(fcQListWidgetItem_new3(icon.h, struct_miqt_string(data: text, len: csize_t(len(text)))))
proc create*(T: type QListWidgetItem, other: QListWidgetItem): QListWidgetItem =

  QListWidgetItem.init(fcQListWidgetItem_new4(other.h))
proc create2*(T: type QListWidgetItem, listview: QListWidget): QListWidgetItem =

  QListWidgetItem.init(fcQListWidgetItem_new5(listview.h))
proc create*(T: type QListWidgetItem, listview: QListWidget, typeVal: cint): QListWidgetItem =

  QListWidgetItem.init(fcQListWidgetItem_new6(listview.h, typeVal))
proc create*(T: type QListWidgetItem, text: string, listview: QListWidget): QListWidgetItem =

  QListWidgetItem.init(fcQListWidgetItem_new7(struct_miqt_string(data: text, len: csize_t(len(text))), listview.h))
proc create*(T: type QListWidgetItem, text: string, listview: QListWidget, typeVal: cint): QListWidgetItem =

  QListWidgetItem.init(fcQListWidgetItem_new8(struct_miqt_string(data: text, len: csize_t(len(text))), listview.h, typeVal))
proc create*(T: type QListWidgetItem, icon: gen_qicon.QIcon, text: string, listview: QListWidget): QListWidgetItem =

  QListWidgetItem.init(fcQListWidgetItem_new9(icon.h, struct_miqt_string(data: text, len: csize_t(len(text))), listview.h))
proc create*(T: type QListWidgetItem, icon: gen_qicon.QIcon, text: string, listview: QListWidget, typeVal: cint): QListWidgetItem =

  QListWidgetItem.init(fcQListWidgetItem_new10(icon.h, struct_miqt_string(data: text, len: csize_t(len(text))), listview.h, typeVal))
proc clone*(self: QListWidgetItem, ): QListWidgetItem =

  QListWidgetItem(h: fcQListWidgetItem_clone(self.h))

proc listWidget*(self: QListWidgetItem, ): QListWidget =

  QListWidget(h: fcQListWidgetItem_listWidget(self.h))

proc setSelected*(self: QListWidgetItem, select: bool): void =

  fcQListWidgetItem_setSelected(self.h, select)

proc isSelected*(self: QListWidgetItem, ): bool =

  fcQListWidgetItem_isSelected(self.h)

proc setHidden*(self: QListWidgetItem, hide: bool): void =

  fcQListWidgetItem_setHidden(self.h, hide)

proc isHidden*(self: QListWidgetItem, ): bool =

  fcQListWidgetItem_isHidden(self.h)

proc flags*(self: QListWidgetItem, ): gen_qnamespace.ItemFlag =

  gen_qnamespace.ItemFlag(fcQListWidgetItem_flags(self.h))

proc setFlags*(self: QListWidgetItem, flags: gen_qnamespace.ItemFlag): void =

  fcQListWidgetItem_setFlags(self.h, cint(flags))

proc text*(self: QListWidgetItem, ): string =

  let v_ms = fcQListWidgetItem_text(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setText*(self: QListWidgetItem, text: string): void =

  fcQListWidgetItem_setText(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc icon*(self: QListWidgetItem, ): gen_qicon.QIcon =

  gen_qicon.QIcon(h: fcQListWidgetItem_icon(self.h))

proc setIcon*(self: QListWidgetItem, icon: gen_qicon.QIcon): void =

  fcQListWidgetItem_setIcon(self.h, icon.h)

proc statusTip*(self: QListWidgetItem, ): string =

  let v_ms = fcQListWidgetItem_statusTip(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setStatusTip*(self: QListWidgetItem, statusTip: string): void =

  fcQListWidgetItem_setStatusTip(self.h, struct_miqt_string(data: statusTip, len: csize_t(len(statusTip))))

proc toolTip*(self: QListWidgetItem, ): string =

  let v_ms = fcQListWidgetItem_toolTip(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setToolTip*(self: QListWidgetItem, toolTip: string): void =

  fcQListWidgetItem_setToolTip(self.h, struct_miqt_string(data: toolTip, len: csize_t(len(toolTip))))

proc whatsThis*(self: QListWidgetItem, ): string =

  let v_ms = fcQListWidgetItem_whatsThis(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setWhatsThis*(self: QListWidgetItem, whatsThis: string): void =

  fcQListWidgetItem_setWhatsThis(self.h, struct_miqt_string(data: whatsThis, len: csize_t(len(whatsThis))))

proc font*(self: QListWidgetItem, ): gen_qfont.QFont =

  gen_qfont.QFont(h: fcQListWidgetItem_font(self.h))

proc setFont*(self: QListWidgetItem, font: gen_qfont.QFont): void =

  fcQListWidgetItem_setFont(self.h, font.h)

proc textAlignment*(self: QListWidgetItem, ): cint =

  fcQListWidgetItem_textAlignment(self.h)

proc setTextAlignment*(self: QListWidgetItem, alignment: cint): void =

  fcQListWidgetItem_setTextAlignment(self.h, alignment)

proc setTextAlignmentWithAlignment*(self: QListWidgetItem, alignment: gen_qnamespace.AlignmentFlag): void =

  fcQListWidgetItem_setTextAlignmentWithAlignment(self.h, cint(alignment))

proc setTextAlignment2*(self: QListWidgetItem, alignment: gen_qnamespace.AlignmentFlag): void =

  fcQListWidgetItem_setTextAlignment2(self.h, cint(alignment))

proc background*(self: QListWidgetItem, ): gen_qbrush.QBrush =

  gen_qbrush.QBrush(h: fcQListWidgetItem_background(self.h))

proc setBackground*(self: QListWidgetItem, brush: gen_qbrush.QBrush): void =

  fcQListWidgetItem_setBackground(self.h, brush.h)

proc foreground*(self: QListWidgetItem, ): gen_qbrush.QBrush =

  gen_qbrush.QBrush(h: fcQListWidgetItem_foreground(self.h))

proc setForeground*(self: QListWidgetItem, brush: gen_qbrush.QBrush): void =

  fcQListWidgetItem_setForeground(self.h, brush.h)

proc checkState*(self: QListWidgetItem, ): gen_qnamespace.CheckState =

  gen_qnamespace.CheckState(fcQListWidgetItem_checkState(self.h))

proc setCheckState*(self: QListWidgetItem, state: gen_qnamespace.CheckState): void =

  fcQListWidgetItem_setCheckState(self.h, cint(state))

proc sizeHint*(self: QListWidgetItem, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQListWidgetItem_sizeHint(self.h))

proc setSizeHint*(self: QListWidgetItem, size: gen_qsize.QSize): void =

  fcQListWidgetItem_setSizeHint(self.h, size.h)

proc data*(self: QListWidgetItem, role: cint): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQListWidgetItem_data(self.h, role))

proc setData*(self: QListWidgetItem, role: cint, value: gen_qvariant.QVariant): void =

  fcQListWidgetItem_setData(self.h, role, value.h)

proc operatorLesser*(self: QListWidgetItem, other: QListWidgetItem): bool =

  fcQListWidgetItem_operatorLesser(self.h, other.h)

proc read*(self: QListWidgetItem, inVal: gen_qdatastream.QDataStream): void =

  fcQListWidgetItem_read(self.h, inVal.h)

proc write*(self: QListWidgetItem, outVal: gen_qdatastream.QDataStream): void =

  fcQListWidgetItem_write(self.h, outVal.h)

proc operatorAssign*(self: QListWidgetItem, other: QListWidgetItem): void =

  fcQListWidgetItem_operatorAssign(self.h, other.h)

proc typeX*(self: QListWidgetItem, ): cint =

  fcQListWidgetItem_typeX(self.h)

proc callVirtualBase_clone(self: QListWidgetItem, ): QListWidgetItem =


  QListWidgetItem(h: fQListWidgetItem_virtualbase_clone(self.h))
